--- a/02_pgm/03_train_CLDNNs.ipynb
+++ b/02_pgm/03_train_CLDNNs.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# ライブラリの読み込み\n",
     "import numpy as np\n",
@@ -41,6 +49,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from keras.utils.np_utils import to_categorical\n",
     "from keras.callbacks import ModelCheckpoint,EarlyStopping\n",
     "from keras.models import Model\n",
     "\n",
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +200,7 @@
        "4  03_work/raw_waves/train/0005678b57ca265a65f8ef...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +220,7 @@
        "'03_work/raw_waves/train/0002f1cd968ca78ada9e1c7037224773.pickle'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +321,7 @@
        "4  03_work/raw_waves/train/0005678b57ca265a65f8ef...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +352,7 @@
        "{'FE_AD': 0, 'FE_CH': 1, 'FE_EL': 2, 'MA_AD': 3, 'MA_CH': 4, 'MA_EL': 5}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +443,7 @@
        "4  03_work/raw_waves/train/0005678b57ca265a65f8ef...  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,8 +486,11 @@
     "        self.data_df = self.data_df.sample(frac=1).reset_index(drop=True) #.loc[self.cur_index:self.cur_index+self.minibatchsize-1,:]\n",
     "    \n",
     "    def get_batch(self,minibatchsize,duration_sec):\n",
+    "        \n",
+    "        num_classes = len(label2int)\n",
+    "        \n",
     "        inputs = np.zeros([minibatchsize,duration_sec*self.sr,1])\n",
-    "        outputs = np.zeros(minibatchsize)\n",
+    "        outputs = np.zeros([minibatchsize,num_classes])\n",
     "        \n",
     "        train_batch_df = self.data_df.loc[self.cur_index:self.cur_index+self.minibatchsize-1,:]\n",
     "#        print(self.cur_index)\n",
@@ -508,7 +520,7 @@
     "#            print(i)\n",
     "\n",
     "            inputs[i,:,0] = a\n",
-    "            outputs[i] = label2int[label]\n",
+    "            outputs[i,:] = to_categorical(label2int[label],num_classes=num_classes)\n",
     "            \n",
     "        self.cur_index = self.cur_index + minibatchsize\n",
     "        \n",
@@ -534,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data_gen = RawWaveGenerator(minibatchsize=32,duration_sec=5,data_df=train_info)"
+    "data_gen = RawWaveGenerator(minibatchsize=32,duration_sec=5,data_df=train_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,20 +564,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for i,v in enumerate(data_gen.next_train()):\n",
     "    # 音声データの振幅がinfやnanでないか確認\n",
-    "#    print(np.min(v[0]))\n",
-    "#    if i == 5:\n",
-    "#        break"
+    " #   print(np.min(v[0]))\n",
+    "\n",
+    "#    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +697,7 @@
        "'\\n#学習モデルの構築\\nsr = 22050\\nduration_sec = 3\\n#words_per_epoch = 16000\\n#val_split = 0.2\\n#val_words = int(words_per_epoch * (val_split))\\n\\n#conv_filters = 256\\nconv_filters = 400\\n#kernel_size = (3, 3)\\nkernel_size = 3\\npool_size = 2\\ntime_dense_size = 32\\n\\nwindow_size_sec = 35 * (10 ** -3)\\n\\n#rnn_size = \\n#minibatchsize = 32\\n\\ninput_shape = [duration_sec*sr,1]\\n    \\n# TODO : Conv1Dに変更    \\n\\nact = \\'relu\\'\\n\\ninput_data = Input(name=\\'the_input\\', \\n                   shape=input_shape, \\n                   dtype=\\'float32\\')\\n\\ninner = Conv1D(filters = conv_filters, \\n               kernel_size = int(window_size_sec * sr),\\n               padding=\\'valid\\',\\n               kernel_initializer=\\'glorot_uniform\\',\\n               name=\\'conv1\\')(input_data)\\n\\ninner = MaxPooling1D(pool_size= duration_sec*sr - int(window_size_sec * sr) + 1, name=\\'max1\\')(inner)\\n\\ninner = Activation(log_relu,name=\"act1\")(inner)\\n#inner = Activation(\"relu\",name=\"act1\")(inner)\\n#inner = Activation(log_relu,name=\"relu\")(inner)\\n\\ninner = Reshape((conv_filters,1),name=\"reshape1\")(inner)\\n\\ninner = Conv1D(filters=256,\\n               kernel_size= 8, padding=\\'valid\\',\\n               kernel_initializer=\\'glorot_uniform\\',\\n               activation=\"relu\",#linear\\n               name=\\'conv2\\')(inner)\\n\\n#inner = BatchNormalization(name=\"batch_norm1\")(inner)\\n\\n# 以下のactivationをするなら、conv2のactをlinearにする\\n#inner = Activation(\"relu\",name=\"act2\")(inner)\\n\\n\\ninner = MaxPooling1D(pool_size = 3, \\n                     name=\\'max2\\')(inner)\\n\\ntimesteps = 32\\ndata_dim = 512\\nrnn_size = 832\\n\\ninner = LSTM(rnn_size, return_sequences=True,\\n             input_shape=(timesteps, data_dim),\\n            name = \"lstm1\")(inner)\\n\\ninner = LSTM(rnn_size, return_sequences=True,\\n             input_shape=(timesteps, data_dim),\\n            name = \"lstm2\")(inner)\\n\\ninner = LSTM(rnn_size, return_sequences=True,\\n             input_shape=(timesteps, data_dim),\\n            name = \"lstm3\")(inner)\\n\\ninner = Flatten(name = \"flatten\")(inner)\\n\\ninner = Dense(1024,name = \"dense1\")(inner)\\n\\ninner = BatchNormalization(name=\"batch_norm1\")(inner)\\n\\ninner = Activation(\"relu\",name=\"act2\")(inner)\\n\\nout = Dense(output_dim,activation=\"sigmoid\",name = \"dense2\")(inner)\\n\\nmodel = Model(inputs=input_data, outputs=out)\\n\\n#lr = 0.001でうまくいかなければ、ADAMにしてもよいかも\\n# callbacksにf1 scoreを追加したい\\n# https://qiita.com/koshian2/items/81abfc0a75ea99f726b9\\n\\nsgd = SGD(lr=LEARNING_RATE,\\n          decay=1e-6, \\n          momentum=0.9,\\n          nesterov=True,\\n          clipnorm=5)\\n\\nmodel.compile(loss = \"sparse_categorical_crossentropy\", optimizer=sgd,metrics = [\"accuracy\"])\\n\\n'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -941,9 +953,9 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "the_input (InputLayer)       (None, 66150, 1)          0         \n",
+      "the_input (InputLayer)       (None, 110250, 1)         0         \n",
       "_________________________________________________________________\n",
-      "conv1 (Conv1D)               (None, 65380, 400)        308800    \n",
+      "conv1 (Conv1D)               (None, 109480, 400)       308800    \n",
       "_________________________________________________________________\n",
       "max1 (MaxPooling1D)          (None, 1, 400)            0         \n",
       "_________________________________________________________________\n",
@@ -984,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,11 +1036,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "patience = 5\n",
+    "patience = 3\n",
     "es = EarlyStopping(monitor = \"val_loss\",\n",
     "                   patience = patience)\n",
     "\n",
@@ -1040,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1083,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      " 816/6049 [===>..........................] - ETA: 1:20:15 - loss: -0.2800 - f1: 1.3613 - acc: 0.0699"
+      "  25/6049 [..............................] - ETA: 2:13:34 - loss: 0.7784 - f1: 0.2129 - acc: 0.1920"
      ]
     },
     {
@@ -1081,7 +1093,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-85-4b3a2f70ddd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m                                \u001b[0mvalidation_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msteps_per_epoch_val\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                \u001b[0minitial_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstart_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m                           callbacks=[es,mc])\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-39-4b3a2f70ddd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m                                \u001b[0mvalidation_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msteps_per_epoch_val\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                \u001b[0minitial_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstart_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m                           callbacks=[es,mc])\n\u001b[0m",
       "\u001b[0;32m~/anaconda3/envs/newest/lib/python3.6/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name + '` call to the ' +\n\u001b[1;32m     90\u001b[0m                               'Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 91\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/newest/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   1416\u001b[0m             \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1417\u001b[0m             \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1418\u001b[0;31m             initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1420\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0minterfaces\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_generator_methods_support\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/newest/lib/python3.6/site-packages/keras/engine/training_generator.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(model, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m    215\u001b[0m                 outs = model.train_on_batch(x, y,\n\u001b[1;32m    216\u001b[0m                                             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m                                             class_weight=class_weight)\n\u001b[0m\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1109,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
